compile.log
> Task :compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE

> Task :compileTestJava FAILED
C:\Users\David Gomez\Desktop\proyectos\Calidad\AutomatizacionCalidadFE\src\test\java\org\calidadsoftware\stepdefinitions\MedicalLoginSteps.java:79: error: '(' expected
        public void elBotonDeLoginDebePermanecer DeshabilitadoOMostrarUnError() {
                                                 ^
1 error

[Incubating] Problems report is available at: file:///C:/Users/David%20Gomez/Desktop/proyectos/Calidad/AutomatizacionCalidadFE/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\David Gomez\Desktop\proyectos\Calidad\AutomatizacionCalidadFE\src\test\java\org\calidadsoftware\stepdefinitions\MedicalLoginSteps.java:79: error: '(' expected
          public void elBotonDeLoginDebePermanecer DeshabilitadoOMostrarUnError() {
                                                   ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
2 actionable tasks: 1 executed, 1 up-to-date
